--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -12,11 +12,10 @@
 \section*{Rozdanie 1}
 \vspace{-0.5cm}
 \handdiagramv
-        {\vhand{876}{A2}{A752}{J742}}
-        {\vhand{AQ43}{KQJT4}{Q}{K83}}
-        {\vhand{KJ5}{987653}{3}{Q65}}
-        {\vhand{T92}{--}{KJT9864}{AT9}}
-        {}
+{\vhand{876}{A2}{A752}{J742}}
+{\vhand{AQ43}{KQJT4}{Q}{K83}}
+{\vhand{KJ5}{987653}{3}{Q65}}
+{\vhand{T92}{--}{KJT9864}{AT9}}{}
 
 \vspace{-0.7cm}
 
@@ -42,11 +41,11 @@ Odwrót nastąpił w pika i reszta lew była moja (+2), a obrońcy nie wzięli n
 \pagebreak
 \section*{Rozdanie 2}
 \handdiagramv
-        {\vhand{632}{A765}{Q9}{AK32}}
-        {\vhand{KQT8}{J83}{754}{864}}
-        {\vhand{J94}{QT42}{K86}{QT5}}
-        {\vhand{A75}{K9}{AJT32}{J97}}
-        {NS}
+{\vhand{632}{A765}{Q9}{AK32}}
+{\vhand{KQT8}{J83}{754}{864}}
+{\vhand{J94}{QT42}{K86}{QT5}}
+{\vhand{A75}{K9}{AJT32}{J97}}
+{NS}
 
 Po oczywistej licytacji znalazłam się (\nvul{W}) w kontrakcie 1\nt.
 Obrońcy ściągnęli 4 trefle i wyszli w kiera, ze stołu małe, od S dama, z ręki król.
@@ -55,14 +54,19 @@ zatem zaimpasowałam go. Odwrót S w karo musiałam przejąć asem i pozostało 
 
 \hfill -K
 
+A nie, jednak jestem debilem, trzeba było te dwa piki z góry zebrać i potem zaimpasować waleta, wtedy wezmę -1.
+Albo grać na A\hearts u \vul{N} i figury karo rozdzielone, żeby wziąć swoje, ale jak to się nie uda to mogę skończyć bez więcej.
+
+\hfill -K
+
 \pagebreak
 \section*{Rozdanie 3}
 \handdiagramv
-        {\vhand{Q543}{AK5}{Q9}{KJ73}}
-        {\vhand{AT72}{--}{T8542}{Q852}}
-        {\vhand{J96}{JT97432}{J}{A4}}
-        {\vhand{K8}{Q86}{AK763}{T96}}
-        {WE}
+{\vhand{Q543}{AK5}{Q9}{KJ73}}
+{\vhand{AT72}{--}{T8542}{Q852}}
+{\vhand{J96}{JT97432}{J}{A4}}
+{\vhand{K8}{Q86}{AK763}{T96}}
+{WE}
 
 \begin{table}[h!]
     \centering
@@ -122,7 +126,8 @@ Wtf, mam pozycję na markę i tyle XD
 
 \pagebreak
 \section*{Rozdanie 5}
-\handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
+\handdiagramv
+{\vhand{AK9832}{KQ96}{5}{JT}}
 {\vhand{}{AT4}{AQ832}{A8543}}
 {\vhand{JT64}{J82}{T64}{K72}}
 {\vhand{Q75}{753}{KJ97}{Q96}}
@@ -131,7 +136,7 @@ Wtf, mam pozycję na markę i tyle XD
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
         -- & 1\spades & \alrts{2\nt} & 3\spades \\
         4\diams & 4\spades & 5\diams & all \pass \\
     \end{tabular}
@@ -153,7 +158,7 @@ na trefle 2-3 i K\clubs u \vul{S}, mimo otwarcia na \vul{N}. Swoje.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+        \vul{W} (K) & \nvul{N} & \vul{E} (B) & \nvul{S}\\
          & & \pass & \pass \\
         1\diams & \dbl & 1\hearts & 1\spades \\
         \pass & \pass & 2\spades & \pass \\
@@ -168,7 +173,7 @@ Należało jednak zauważyć, że kiery są prawie stuprocentowo 4-4, przebić 2
 
 \hfill -B
 
-Ja tego do końca nie widzę, tzn jak są to super, a jak nie są? Zostanę z x\diams xx\clubs x\spades
+Ja tego do końca nie widzę, tzn. jak są to super, a jak nie są? Zostanę z x\diams xx\clubs x\spades
 w ręce i xx\diams x\hearts w stole, nie wiem czy N ma xxx\clubs czy x\diams xx\clubs, jak teraz
 źle zagram to wezmę swoje, a tak to zawsze +1.
 
@@ -185,7 +190,7 @@ w ręce i xx\diams x\hearts w stole, nie wiem czy N ma xxx\clubs czy x\diams xx\
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K)\\
                                 &&& 1\hearts \\
         \pass & 1\spades & 2\clubs & \pass \\
         \pass & 2\spades & all \pass & \\
@@ -209,7 +214,7 @@ W rozgrywce chyba nic się nie dzieje. Wist J\diams.\\
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
         \pass & 1\hearts & \pass & 1\spades \\
         \pass & 2\clubs & \dbl & 2\diams \\
         \pass & 2\nt & \pass & 3\spades \\
@@ -244,8 +249,8 @@ Wist Q\clubs wypuszczał, ale zagrałam kiery z góry licząc że dama spadnie.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-        &         1\hearts & \pass & 1\spades \\
+        \vul{W} & \nvul{N} (B) & \vul{E} & \nvul{S} (K)\\
+        -- & 1\hearts & \pass & 1\spades \\
         \pass & 2\hearts & \pass & 3\nt \\
         all \pass & & & \\
     \end{tabular}
@@ -259,7 +264,8 @@ Wist 8\clubs.
 
 \hfill -B
 
-W rozgrywce nic się nie działo, po wiście 8\clubs wziętym K\clubs oddałam 3 trefle i A\hearts.
+Dla potomnych: Bartek pokazał 14+, bo gramy otwarcie 2\major = 10-13.
+W rozgrywce nic się nie działo, po wiście 8\clubs wziętym K\clubs oddałam 3 trefle i A\hearts.\\
 
 \hfill -K
 
@@ -274,8 +280,8 @@ W rozgrywce nic się nie działo, po wiście 8\clubs wziętym K\clubs oddałam 3
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-        &       &           \pass & \pass \\
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K) \\
+        -- & -- & \pass & \pass \\
         2\clubs & \dbl & \pass & 2\diams \\
         all \pass & & & \\
     \end{tabular}
@@ -332,7 +338,7 @@ Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \xspades J do 
         -- & 1\diams & \pass & 1\spades \\
         \pass & 2\nt & \pass & 3\clubs \\
         \pass & 3\hearts & \pass & 3\spades \\
-        \pass & 3\nt & \pass & 4\clubs\\
+        \pass & 3\nt & \pass & 4\clubs \\
         \pass & 4\diams & \pass & 4\hearts \\
         \pass & 4\spades & all \pass & \\
     \end{tabular}
@@ -354,7 +360,7 @@ Dałem 3NT które chciałem do gry, ale niestety było Non Serious. Na szczęśc
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K) \\
         -- & \pass & 1\nt & \pass \\
         3\nt & all \pass & & \\
     \end{tabular}
@@ -385,7 +391,7 @@ Pik może mi podgrywać damę, której rozgrywający nie trafi. Karo żeby wypus
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
         -- & -- & 2\diams & \pass \\
         2\nt & \pass & 3\diams & \pass \\
         4\hearts \\
@@ -416,11 +422,12 @@ w karach powinnam zrzucić a nie kasztan. Aczkolwiek nie wiem czy to nie jakiś 
 {\vhand{QT8}{J8}{K94}{KQJ92}}
 {\vhand{K3}{T73}{AT873}{T43}}
 {NS}
-% \vspace{-0.5cm}
+
+\vspace{-0.5cm}
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+        \nvul{W} & \vul{N} (B) & \nvul{E} & \vul{S} (K) \\
         -- & -- & -- & 1\clubs \\
         \pass & 1\spades & 2\hearts & \pass \\
         \pass & 4\spades & all \pass & \\
@@ -455,7 +462,7 @@ Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+        \vul{W} & \nvul{N} (B) & \vul{E} & \nvul{S} (K) \\
         1\spades & \pass & 2\clubs & \pass \\
         2\hearts & \pass & 4\hearts & all \pass \\
     \end{tabular}
@@ -535,7 +542,7 @@ Wniosek - N ma 5 pików i trzeba wyjść damą. Na szczęście bez konsekwencji.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S} \\
+        \vul{W} (B) & \nvul{N} & \vul{E} (K) & \nvul{S} \\
         -- & -- & -- & 1\nt \\
         \pass & 2\diams & \pass & 2\hearts \\
         all \pass & & & \\
@@ -544,7 +551,7 @@ Wniosek - N ma 5 pików i trzeba wyjść damą. Na szczęście bez konsekwencji.
 
 Wist 5\diams do T i J. \xhearts A, kier do K. \xclubs 8 do Q.
 
-No i wtopa. Wyszedłem nieco automatycznie w pika, bo stwierdziłem, że E na pewno nie wychodzi ósemką mając KT i jest ryzyko, 
+No i wtopa. Wyszedłem nieco automatycznie w pika, bo stwierdziłem, że \vul{E} na pewno nie wychodzi ósemką mając KT i jest ryzyko, 
 że S usunie pika z dziadka. Jednak niezależnie od tego, należało zabezpieczyć się grając \xspades K! A następnie trefla, który
 już nie mógł wypuszczać lewy. 
 
@@ -566,7 +573,7 @@ nie szkodziłoby mu przepuścić, więc mogłam wyjść poprawnie.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (B) & \vul{N} & \vul{E} (K) & \vul{S}\\
         1\clubs & \dbl & \pass & 1\spades \\
         \pass & 2\hearts & \pass & 2\nt \\
         \pass & 3\nt & all \pass & \\
@@ -628,14 +635,14 @@ Aczkolwiek Bartek mógł położyć T\diams zamiast puszczać, wtedy nie mam oka
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+        \vul{W} (B) & \nvul{N} & \vul{E} (K) & \nvul{S}\\
         -- & -- & \pass & 1\spades \\
         \pass & \alrts{1\nt} & all \pass & \\
     \end{tabular}
 \end{table}
 
 1\nt = inwit z fitem, 4333\\
-Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak N pokazał \xclubs AK. Płaskie jak cep.
+Wist 6\diams. Brałem piki i wychodziłem w trefla. Zdziwko jak \nvul{N} pokazał \xclubs AK. Płaskie jak cep.
 
 \hfill -B
 
@@ -706,17 +713,18 @@ Wist 6\diams, oddane A\diams i przebitka.
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-        \pass & \pass & 3\diams & all \pass \\
+        \vul{W} (B) & \nvul{N} & \vul{E} (K) & \nvul{S}\\
+        -- & \pass & \pass & 3\diams \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
 
 Wist 2\spades\\
-Nie no gość miał 13, dyskusyjne to otwarcie
+Nie no, gość miał 13, dyskusyjne to otwarcie.
 
 \hfill -K
 
-++ myślałem że miał 12
+++ myślałem że miał 12.
 
 \hfill -B
 
@@ -766,14 +774,14 @@ Wpisane na złą linię :(
     \end{tabular}
 \end{table}
 
-Wist 5\diams wzięty waletem (1). Skoro mam mniej pików, to na pewno ma je S, prawda? 
-Zagrałem kiera, w trakcie czego N wyciągnął kartę z ręki, więc położyłem \xhearts T, która wzięła (2).
+Wist 5\diams wzięty waletem (1). Skoro mam mniej pików, to na pewno ma je \nvul{S}, prawda? 
+Zagrałem kiera, w trakcie czego \nvul{N} wyciągnął kartę z ręki, więc położyłem \xhearts T, która wzięła (2).
 No dobra, teraz to już na 100\% ma piki.
-Zgrywam \xclubs KQ (3), N bije drugiego i gra pika do Asa, S odgrywa pika którego biję Królem (4).
+Zgrywam \xclubs KQ (3), \nvul{N} bije drugiego i gra pika do Asa, \nvul{N} odgrywa pika którego biję Królem (4).
 
-O zgrozo, N dokłada! Dopiero teraz przypomniałem sobie otwarcie 3\diams Giorgi'a i ogarnąłem, że on umie w bloki.
+O zgrozo, \nvul{N} dokłada! Dopiero teraz przypomniałem sobie otwarcie 3\diams Giorgi'a i ogarnąłem, że on umie w bloki.
 Rozliczam rozdanie raz jeszcze i gram \xspades 9, licząc na wpust karowy.
-N bije i gra pika do mojej blotki (5).
+\nvul{N} bije i gra pika do mojej blotki (5).
 
 To umożliwia mi drugą próbę wpustu. Oddaję \xhearts 6 do \xhearts 9. S musi teraz dać mi dostęp do trefli lub lewę kierową, co czyni. (6, 7).
 Noga. Ale z jaką historią!
