--- a/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage{import}
 
-\import{../../../../lib/}{bridge.sty}
+\import{../../lib/}{bridge.sty}
 
 \title{Żaczek 25.09.24}
 \author{Krysia \& Bartek}
@@ -190,17 +190,11 @@ w ręce i xx\diams x\hearts w stole, nie wiem czy \nvul{N} ma xxx\clubs czy x\di
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K)\\
-        -- & -- & -- & 1\hearts \\
-        \pass & 1\spades & 2\clubs & \pass \\
-        \pass & 2\spades & all \pass & \\
+        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
+        -- & 1\spades & \alrts{2\nt} & 3\spades \\
+        4\diams & 4\spades & 5\diams & all \pass \\
     \end{tabular}
 \end{table}
-
-Wznowiłem ,,tylko'' 2\spades oczekując maksymalnie dubla w stole oraz niedzielących się kolorów 
-(wejście z QJ -- pewnie ma układ)\\
-W rozgrywce chyba nic się nie dzieje. Wist J\diams.\\
-
 \hfill -B
 
 \pagebreak
@@ -669,10 +663,9 @@ Po mojej stronie stołu było śmiesznie, nie mogłam sobie wyobrazić rąk prze
 2\nt było jakieś naturalne, inwitujące, w sumie ucieszyłabym się grając 2 (albo 3) \nt.
 Na 4\nt też prawie spasowałam, ale ja bym to musiała grać. Myślałam, że 4\nt to młode,
 ale i tak uważam, że się dogadaliśmy.\\
+Wist 8\spades
 
 \hfill -K
-
-Wist 8\spades
 
 Skok \vul{S} w końcówkę wywołał niemałą konsternację przy stole. Musi mieć jakiś potężny układ, może 6-5 z renonsem trefl?
 Dużo wskazuje, że Krysia mogłą sobie ubzdurać, że 2NT to cośtam z czerwonymi. Bałem się dać 5\clubs, a 4NT jest dobrym 
