--- a/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
@@ -190,11 +190,17 @@ w ręce i xx\diams x\hearts w stole, nie wiem czy \nvul{N} ma xxx\clubs czy x\di
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
-        -- & 1\spades & \alrts{2\nt} & 3\spades \\
-        4\diams & 4\spades & 5\diams & all \pass \\
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K)\\
+        -- & -- & -- & 1\hearts \\
+        \pass & 1\spades & 2\clubs & \pass \\
+        \pass & 2\spades & all \pass & \\
     \end{tabular}
 \end{table}
+
+Wznowiłem ,,tylko'' 2\spades oczekując maksymalnie dubla w stole oraz niedzielących się kolorów 
+(wejście z QJ -- pewnie ma układ)\\
+W rozgrywce chyba nic się nie dzieje. Wist J\diams.\\
+
 \hfill -B
 
 \pagebreak
