--- a/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_25_09_24.tex
@@ -394,7 +394,7 @@ Pik może mi podgrywać damę, której rozgrywający nie trafi. Karo żeby wypus
         \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
         -- & -- & 2\diams & \pass \\
         2\nt & \pass & 3\diams & \pass \\
-        4\hearts \\
+        4\hearts & all \pass & & \\
     \end{tabular}
 \end{table}
 
