--- a/KrysiaBartek2024/old/resources/potezna_strefa.tex
+++ b/KrysiaBartek2024/old/resources/potezna_strefa.tex
@@ -225,6 +225,8 @@ Po wejściu przeciwnika na 1\ntx\ :\\
 - po wejściu 2\clubs : \dbl = Stayman, reszta tak jak bez wejścia\\
 - po innych wejściach odzywki na poziomie 2 są \nf, na poziomie 3: \gf.\\
 Po wejściu przeciwnika kontrą licytujemy tak jakby jej nie było.\\
+W ogólności, po wejściach przeciwnika, nowy kolor na poziomie 2 nie forsuje, na poziomie 3 jest \gf.\\
+Gramy \textbf{Drury}! (Ale tylko w jednostronnej).
 
 \newpage
 
