--- a/KrysiaBartek2024/analyses/tools/tc-results-parser/test_python.tex
+++ b/KrysiaBartek2024/analyses/tools/tc-results-parser/test_python.tex
@@ -14,10 +14,10 @@
     
 \pagebreak
 \section*{Rozdanie 1}
-\handdiagramv{\vhand{876}{A2}{A752}{J742}}
-{\vhand{AQ43}{KQJT4}{Q}{K83}}
-{\vhand{KJ5}{987653}{3}{Q65}}
-{\vhand{T92}{}{KJT9864}{AT9}}
+\handdiagramv{\vhand{T8542}{K3}{KJ3}{KJ7}}
+{\vhand{Q7}{A2}{T9765}{Q963}}
+{\vhand{93}{QJ985}{Q42}{852}}
+{\vhand{AKJ6}{T764}{A8}{AT4}}
 {}
 
 \begin{table}[h!]
@@ -30,10 +30,10 @@
 
 \pagebreak
 \section*{Rozdanie 2}
-\handdiagramv{\vhand{632}{A765}{Q9}{AK32}}
-{\vhand{KQT8}{J83}{754}{864}}
-{\vhand{J94}{QT42}{K86}{QT5}}
-{\vhand{A75}{K9}{AJT32}{J97}}
+\handdiagramv{\vhand{J6532}{5}{KJ6}{KQ53}}
+{\vhand{874}{AK843}{Q82}{97}}
+{\vhand{KT9}{JT97}{T743}{84}}
+{\vhand{AQ}{Q62}{A95}{AJT62}}
 {NS}
 
 \begin{table}[h!]
@@ -46,10 +46,10 @@
 
 \pagebreak
 \section*{Rozdanie 3}
-\handdiagramv{\vhand{Q543}{AK5}{Q9}{KJ73}}
-{\vhand{AT72}{}{T8542}{Q852}}
-{\vhand{J96}{JT97432}{J}{A4}}
-{\vhand{K8}{Q86}{AK763}{T96}}
+\handdiagramv{\vhand{AQ65}{Q97}{K82}{J97}}
+{\vhand{9842}{AKT54}{Q9}{64}}
+{\vhand{3}{J632}{J654}{AQT5}}
+{\vhand{KJT7}{8}{AT73}{K832}}
 {EW}
 
 \begin{table}[h!]
@@ -62,10 +62,10 @@
 
 \pagebreak
 \section*{Rozdanie 4}
-\handdiagramv{\vhand{K7}{QJ75}{75}{KJ542}}
-{\vhand{T93}{T2}{AKJ42}{AQ9}}
-{\vhand{AQ654}{AK963}{Q6}{T}}
-{\vhand{J82}{84}{T983}{8763}}
+\handdiagramv{\vhand{AKT5}{63}{Q73}{7543}}
+{\vhand{Q64}{J98}{AJ6}{AJT6}}
+{\vhand{8732}{QT54}{852}{K9}}
+{\vhand{J9}{AK72}{KT94}{Q82}}
 {NSEW}
 
 \begin{table}[h!]
@@ -78,10 +78,10 @@
 
 \pagebreak
 \section*{Rozdanie 5}
-\handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
-{\vhand{}{AT4}{AQ832}{A8543}}
-{\vhand{JT64}{J82}{T64}{K72}}
-{\vhand{Q75}{753}{KJ97}{Q96}}
+\handdiagramv{\vhand{K5}{A7}{987632}{J54}}
+{\vhand{AQ82}{J4}{AKT}{KQT8}}
+{\vhand{3}{K96532}{Q5}{9632}}
+{\vhand{JT9764}{QT8}{J4}{A7}}
 {NS}
 
 \begin{table}[h!]
@@ -94,10 +94,10 @@
 
 \pagebreak
 \section*{Rozdanie 6}
-\handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
-{\vhand{J8}{AK654}{97643}{T}}
-{\vhand{9753}{JT93}{Q2}{KQ6}}
-{\vhand{A642}{}{AJ85}{J7432}}
+\handdiagramv{\vhand{T74}{763}{76432}{65}}
+{\vhand{9852}{AQ5}{Q95}{AKQ}}
+{\vhand{AQ63}{KJ84}{J}{9843}}
+{\vhand{KJ}{T92}{AKT8}{JT72}}
 {EW}
 
 \begin{table}[h!]
@@ -110,10 +110,10 @@
 
 \pagebreak
 \section*{Rozdanie 7}
-\handdiagramv{\vhand{KT9652}{T5}{986}{AK}}
-{\vhand{QJ74}{}{KJT5}{QJ754}}
-{\vhand{A3}{A8432}{AQ4}{962}}
-{\vhand{8}{KQJ976}{732}{T83}}
+\handdiagramv{\vhand{T84}{J}{AKJ943}{J53}}
+{\vhand{K532}{Q975}{7}{T742}}
+{\vhand{AQ6}{AKT8}{852}{AKQ}}
+{\vhand{J97}{6432}{QT6}{986}}
 {NSEW}
 
 \begin{table}[h!]
@@ -126,10 +126,10 @@
 
 \pagebreak
 \section*{Rozdanie 8}
-\handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
-{\vhand{53}{82}{A75}{AT8643}}
-{\vhand{KQJT764}{76}{QJ}{J2}}
-{\vhand{9}{Q943}{T9642}{Q75}}
+\handdiagramv{\vhand{A9654}{542}{Q54}{K6}}
+{\vhand{3}{QT63}{AKJT976}{5}}
+{\vhand{QJT872}{AKJ}{}{QJT8}}
+{\vhand{K}{987}{832}{A97432}}
 {}
 
 \begin{table}[h!]
@@ -142,10 +142,10 @@
 
 \pagebreak
 \section*{Rozdanie 9}
-\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
-{\vhand{9}{T943}{QT73}{A962}}
-{\vhand{K7654}{6}{AK62}{K75}}
-{\vhand{QT832}{A5}{985}{Q84}}
+\handdiagramv{\vhand{J7}{KQJ}{AT765}{AJT}}
+{\vhand{T94}{T754}{J93}{952}}
+{\vhand{KQ83}{93}{K84}{8763}}
+{\vhand{A652}{A862}{Q2}{KQ4}}
 {EW}
 
 \begin{table}[h!]
@@ -158,10 +158,10 @@
 
 \pagebreak
 \section*{Rozdanie 10}
-\handdiagramv{\vhand{652}{A843}{K975}{A5}}
-{\vhand{AQ8}{T652}{A863}{82}}
-{\vhand{JT9}{J7}{QT42}{KT64}}
-{\vhand{K743}{KQ9}{J}{QJ973}}
+\handdiagramv{\vhand{KJ762}{A6}{AT43}{Q5}}
+{\vhand{98}{QJ}{QJ7}{AT9763}}
+{\vhand{QT43}{T973}{K92}{42}}
+{\vhand{A5}{K8542}{865}{KJ8}}
 {NSEW}
 
 \begin{table}[h!]
@@ -174,10 +174,10 @@
 
 \pagebreak
 \section*{Rozdanie 11}
-\handdiagramv{\vhand{Q643}{T}{A5432}{865}}
-{\vhand{AJT85}{AK93}{97}{J4}}
-{\vhand{9}{J8742}{JT86}{AQ9}}
-{\vhand{K72}{Q65}{KQ}{KT732}}
+\handdiagramv{\vhand{AT}{A42}{AQT74}{AQ3}}
+{\vhand{5}{KJ76}{J93}{J9654}}
+{\vhand{Q9763}{Q9853}{6}{K2}}
+{\vhand{KJ842}{T}{K852}{T87}}
 {}
 
 \begin{table}[h!]
@@ -190,10 +190,10 @@
 
 \pagebreak
 \section*{Rozdanie 12}
-\handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
-{\vhand{T7}{K83}{Q932}{9762}}
-{\vhand{KJ964}{A4}{654}{A84}}
-{\vhand{Q53}{JT965}{87}{QT3}}
+\handdiagramv{\vhand{Q6}{953}{AQ92}{A864}}
+{\vhand{J987}{AK762}{3}{QT7}}
+{\vhand{AT5}{QJT8}{J84}{K32}}
+{\vhand{K432}{4}{KT765}{J95}}
 {NS}
 
 \begin{table}[h!]
@@ -206,10 +206,10 @@
 
 \pagebreak
 \section*{Rozdanie 13}
-\handdiagramv{\vhand{T7654}{653}{J73}{82}}
-{\vhand{KQ}{T742}{KT8}{AJT4}}
-{\vhand{82}{AQ9}{A965}{K763}}
-{\vhand{AJ93}{KJ8}{Q42}{Q95}}
+\handdiagramv{\vhand{KT5}{JT4}{K832}{862}}
+{\vhand{AQ74}{A87}{A54}{KJ3}}
+{\vhand{93}{Q932}{JT97}{QT7}}
+{\vhand{J862}{K65}{Q6}{A954}}
 {NSEW}
 
 \begin{table}[h!]
@@ -222,10 +222,10 @@
 
 \pagebreak
 \section*{Rozdanie 14}
-\handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
-{\vhand{AT43}{J87643}{Q}{32}}
-{\vhand{QJ87}{T92}{A82}{Q65}}
-{\vhand{K96}{K5}{KJ75}{AK97}}
+\handdiagramv{\vhand{532}{J2}{A94}{KJ863}}
+{\vhand{T984}{AK53}{T3}{A72}}
+{\vhand{AK6}{T9}{KQ7652}{94}}
+{\vhand{QJ7}{Q8764}{J8}{QT5}}
 {}
 
 \begin{table}[h!]
@@ -238,10 +238,10 @@
 
 \pagebreak
 \section*{Rozdanie 15}
-\handdiagramv{\vhand{AJ96542}{K5}{2}{A87}}
-{\vhand{7}{AQ9642}{QJ65}{65}}
-{\vhand{QT8}{J8}{K94}{KQJ92}}
-{\vhand{K3}{T73}{AT873}{T43}}
+\handdiagramv{\vhand{T984}{A82}{JT}{T642}}
+{\vhand{Q63}{KJ7}{A74}{AJ87}}
+{\vhand{K52}{Q653}{Q8532}{K}}
+{\vhand{AJ7}{T94}{K96}{Q953}}
 {NS}
 
 \begin{table}[h!]
@@ -254,10 +254,10 @@
 
 \pagebreak
 \section*{Rozdanie 16}
-\handdiagramv{\vhand{AJ32}{T7}{QT8}{8754}}
-{\vhand{6}{K854}{AJ53}{AJT2}}
-{\vhand{K95}{A96}{K97642}{3}}
-{\vhand{QT874}{QJ32}{}{KQ96}}
+\handdiagramv{\vhand{JT5}{872}{9865}{A72}}
+{\vhand{A4}{J95}{QJ7}{KJ965}}
+{\vhand{KQ962}{AK64}{A3}{43}}
+{\vhand{873}{QT3}{KT42}{QT8}}
 {EW}
 
 \begin{table}[h!]
@@ -270,10 +270,10 @@
 
 \pagebreak
 \section*{Rozdanie 17}
-\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
-{\vhand{43}{K8642}{T92}{JT7}}
-{\vhand{KT95}{QT95}{AJ7}{64}}
-{\vhand{QJ2}{AJ7}{843}{AQ92}}
+\handdiagramv{\vhand{T9}{AK64}{2}{AKQ864}}
+{\vhand{Q762}{J3}{J976}{JT9}}
+{\vhand{KJ54}{T987}{8543}{7}}
+{\vhand{A83}{Q52}{AKQT}{532}}
 {}
 
 \begin{table}[h!]
@@ -286,10 +286,10 @@
 
 \pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{96532}{A874}{A5}{95}}
-{\vhand{J7}{T3}{K8732}{AKQ8}}
-{\vhand{KQT8}{J96}{Q964}{J7}}
-{\vhand{A4}{KQ52}{JT}{T6432}}
+\handdiagramv{\vhand{AQ64}{54}{KQT65}{T3}}
+{\vhand{T9}{KQJ}{A974}{KJ62}}
+{\vhand{KJ752}{T9632}{J32}{}}
+{\vhand{83}{A87}{8}{AQ98754}}
 {NS}
 
 \begin{table}[h!]
@@ -302,10 +302,10 @@
 
 \pagebreak
 \section*{Rozdanie 19}
-\handdiagramv{\vhand{7}{JT654}{K874}{J73}}
-{\vhand{A863}{K7}{QT9}{KT84}}
-{\vhand{Q94}{A832}{AJ}{A952}}
-{\vhand{KJT52}{Q9}{6532}{Q6}}
+\handdiagramv{\vhand{J8532}{KJ}{KJ9}{J92}}
+{\vhand{KQ6}{AQ653}{AQ42}{7}}
+{\vhand{T74}{942}{853}{QT64}}
+{\vhand{A9}{T87}{T76}{AK853}}
 {EW}
 
 \begin{table}[h!]
@@ -318,10 +318,10 @@
 
 \pagebreak
 \section*{Rozdanie 20}
-\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
-{\vhand{T52}{8742}{65}{AJ54}}
-{\vhand{QJ76}{K}{Q842}{T973}}
-{\vhand{K984}{J63}{AJ73}{K2}}
+\handdiagramv{\vhand{T976}{9}{KJ8765}{T2}}
+{\vhand{843}{QJ842}{43}{J85}}
+{\vhand{QJ}{A7653}{AQ}{AK43}}
+{\vhand{AK52}{KT}{T92}{Q976}}
 {NSEW}
 
 \begin{table}[h!]
@@ -334,10 +334,10 @@
 
 \pagebreak
 \section*{Rozdanie 21}
-\handdiagramv{\vhand{KT732}{A98}{652}{AT}}
-{\vhand{6}{KQJ74}{AQ7}{KJ95}}
-{\vhand{AQ95}{T2}{J83}{Q843}}
-{\vhand{J84}{653}{KT94}{762}}
+\handdiagramv{\vhand{AJ4}{A85}{QJT7}{864}}
+{\vhand{KQ8765}{KJ93}{}{T97}}
+{\vhand{T93}{QT2}{K965}{KQJ}}
+{\vhand{2}{764}{A8432}{A532}}
 {NS}
 
 \begin{table}[h!]
@@ -350,10 +350,10 @@
 
 \pagebreak
 \section*{Rozdanie 22}
-\handdiagramv{\vhand{873}{953}{A543}{AK7}}
-{\vhand{9}{K762}{KT862}{JT4}}
-{\vhand{KJT64}{AQ8}{Q97}{92}}
-{\vhand{AQ52}{JT4}{J}{Q8653}}
+\handdiagramv{\vhand{A5}{AJ87}{J842}{AT9}}
+{\vhand{KQJ3}{92}{KT}{KQJ65}}
+{\vhand{8}{KQT5}{AQ975}{743}}
+{\vhand{T97642}{643}{63}{82}}
 {EW}
 
 \begin{table}[h!]
@@ -366,10 +366,10 @@
 
 \pagebreak
 \section*{Rozdanie 23}
-\handdiagramv{\vhand{T83}{KJ762}{854}{97}}
-{\vhand{AK652}{T5}{T62}{A86}}
-{\vhand{QJ974}{93}{AKQ93}{Q}}
-{\vhand{}{AQ84}{J7}{KJT5432}}
+\handdiagramv{\vhand{9}{KQT9}{Q65}{AQT96}}
+{\vhand{QT62}{A865}{KJ84}{8}}
+{\vhand{}{J2}{AT93}{KJ75432}}
+{\vhand{AKJ87543}{743}{72}{}}
 {NSEW}
 
 \begin{table}[h!]
@@ -382,10 +382,10 @@
 
 \pagebreak
 \section*{Rozdanie 24}
-\handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
-{\vhand{KT96}{AK75}{KJ8}{K2}}
-{\vhand{83}{Q8642}{6}{Q7654}}
-{\vhand{A7542}{T9}{T975}{A3}}
+\handdiagramv{\vhand{T943}{765}{J2}{A943}}
+{\vhand{Q865}{A43}{T75}{K52}}
+{\vhand{KJ2}{KJ9}{K3}{QJ876}}
+{\vhand{A7}{QT82}{AQ9864}{T}}
 {}
 
 \begin{table}[h!]
@@ -398,10 +398,10 @@
 
 \pagebreak
 \section*{Rozdanie 25}
-\handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
-{\vhand{T9}{KT643}{K43}{K92}}
-{\vhand{J4}{95}{AQJ986}{AJT}}
-{\vhand{K763}{QJ82}{7}{Q863}}
+\handdiagramv{\vhand{K752}{K3}{AQ5}{QJ93}}
+{\vhand{93}{872}{T6}{AK7642}}
+{\vhand{Q84}{QJT94}{J9}{T85}}
+{\vhand{AJT6}{A65}{K87432}{}}
 {EW}
 
 \begin{table}[h!]
@@ -414,10 +414,10 @@
 
 \pagebreak
 \section*{Rozdanie 26}
-\handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
-{\vhand{AJ73}{J9872}{2}{T94}}
-{\vhand{QT852}{A3}{KJ843}{A}}
-{\vhand{94}{K}{QT76}{K87532}}
+\handdiagramv{\vhand{JT53}{JT873}{5}{AT2}}
+{\vhand{A74}{KQ2}{Q732}{J54}}
+{\vhand{K98}{A65}{AJ86}{987}}
+{\vhand{Q62}{94}{KT94}{KQ63}}
 {NSEW}
 
 \begin{table}[h!]
@@ -430,10 +430,58 @@
 
 \pagebreak
 \section*{Rozdanie 27}
-\handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
-{\vhand{62}{873}{J64}{98653}}
-{\vhand{AT5}{KJ954}{T}{J742}}
-{\vhand{KJ98}{AQT6}{K87}{KQ}}
+\handdiagramv{\vhand{KJ83}{AJ75}{QT4}{A2}}
+{\vhand{952}{863}{J82}{Q764}}
+{\vhand{QT64}{}{7653}{KJT98}}
+{\vhand{A7}{KQT942}{AK9}{53}}
+{}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+
+    \end{tabular}
+\end{table}
+
+\pagebreak
+\section*{Rozdanie 28}
+\handdiagramv{\vhand{K432}{QJ42}{KT5}{Q3}}
+{\vhand{Q97}{T7}{986}{KJ864}}
+{\vhand{J5}{A85}{AJ7432}{AT}}
+{\vhand{AT86}{K963}{Q}{9752}}
+{NS}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+    \end{tabular}
+\end{table}
+
+\pagebreak
+\section*{Rozdanie 29}
+\handdiagramv{\vhand{JT73}{T832}{97}{A84}}
+{\vhand{9}{97}{AK843}{KJT76}}
+{\vhand{AKQ}{AJ64}{J652}{Q9}}
+{\vhand{86542}{KQ5}{QT}{532}}
+{NSEW}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+
+    \end{tabular}
+\end{table}
+
+\pagebreak
+\section*{Rozdanie 30}
+\handdiagramv{\vhand{73}{Q9}{KT2}{KQJ984}}
+{\vhand{KJ86}{AJT8}{8653}{5}}
+{\vhand{AQT952}{4}{AQ7}{A73}}
+{\vhand{4}{K76532}{J94}{T62}}
 {}
 
 \begin{table}[h!]
