--- a/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
@@ -119,6 +119,7 @@ wziął na \xhearts 8 i na prawdę nie wiem dlaczego wziął tylko swoje...
 
 \hfill -K
 
+[pamiętasz co tam zrobił?]
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -171,12 +172,12 @@ licząc, że Bartek ma długość i się domyśli (chyba że pała jest jednozna
 
 Trochę mi się nudziło i w zielonych z przyzwoitymi punktami 
 weszłam \\
-2\clubs = \major z 44. Ja z ręką \vul{W} dałabym chyba kontrę,
+2\clubs = \major z 44. Ja z ręką \vul{W} dałabym kontrę,
 ale może założenia zachęciły przeciwnika do 3\nt.
 Wist \xspades 3 wzięte królem. Rozgrywający ściągnął trefle i kara.
 Wypuściło wyrzucenie na trefla \xspades T -- skończyłam
 w przymusie wpustkowym, chyba mogłam jeszcze uratować sytuację singlując
-króla kier. Zostawienie \xspades T skończyłoby się tak samo,
+króla kier (ale też mogło wypuścić?). Zostawienie \xspades T skończyłoby się tak samo,
 bo żeby zerwać przymus musiałabym wyrzucić damę pik zostawiając \xspades A6.
 Z ilościówek powinnam znać cały skład, ale skąd
 mam wiedzieć o \xspades T...?
@@ -194,10 +195,22 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K) \\
+        -- & -- & -- & \alrts{2\clubs} \\
+        \pass & \alrts{2\diams} & \pass & 2\nt \\
+        \pass & \alrts{3\spades} & \pass & 3\nt \\
+        \pass & 4\diams & \pass & 4\hearts \\
+        \pass & \alrts{5\hearts} & \pass & 5\nt \\
+        \pass & 7\nt & all \pass & \\
     \end{tabular}
 \end{table}
+
+7\nt bez \xdiams Q ale trzeba było gonić Pawła. Na 6\nt się
+bierze nadróbkę, a 7 się przegrywa :( bezpiecznie na -1 się nie opłaca
+jak wiadomo że cała sala ugra 6\nt. Grałam kara w strone stołu,
+ale babka na \vul{W} dokładała beznamiętnie.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 8}
@@ -210,10 +223,15 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K) \\
+        3\clubs & \pass & \pass & 3\spades \\
+        \pass & 4\spades & 5\diams & \pass \\
+        \pass & 5\spades & all pass & \\
     \end{tabular}
 \end{table}
+
+W sumie jak pas jest forsujący, to ja powinnam wynieść.
+Wist 3\diams, impas kier, +1. Nie znaleźli przebitki.
 
 \pagebreak
 \section*{Rozdanie 9}
@@ -226,10 +244,12 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} & \nvul{N} (B) & \vul{E} & \nvul{S} (K) \\
+        -- & 1\nt & all \pass & \\
     \end{tabular}
 \end{table}
+
+Tym razem ja nie inwitowałam z 8... +2, wist \xhearts 7.
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -242,10 +262,30 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} & \vul{N} (B) & \nvul{E} & \vul{S} (K) \\
+        \pass & 1\clubs & 1\hearts & 1\nt \\
+        \pass & \pass & \dbl & \rdbl \\
+        2\diams & \dbl & 2\hearts & \pass \\
+        2\spades & \pass$^*$ & \pass & \dbl \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Pała na 1\nt jest co najmniej dziwna.\\
+Został wezwany sędzia na namysł ($^*$), ale moja decyzja
+była od niego niezależna. Bartek wiedział, że nie mam 4 pików,
+a przeciwnicy mają fit i myślał nad wrzuceniem 2\nt. Wist \xclubs A, marka \xclubs 2,
+Zmiana na 5\hearts, zabite asem. \xdiams do króla, wzięte asem.
+Pod koniec Bartek wyszedł po podwójny renons w \clubs, co chyba nie miało znaczenia, 
+ale było fajne i zmusiło rozgrywającego do nadbicia 
+mojej \xspades 5 królem.\\
+Finalnie -1, 2\nt okazało się być lepsze.
+
+\hfill -K
+
+[nie pamiętam co tam się działo w trakcie,
+jak wyszedłeś w tego trefla to miałam wszystkie piki,
+on jakoś wcześniej kiery przebijał, na co ty wziąłeś?]
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -258,10 +298,17 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K) \\
+        -- & \pass & 1\clubs & \pass \\
+        1\spades & \pass & \alrts{2\diams} & \pass \\
+        \alrts{2\hearts} & \pass & 4\spades & all pass \\
     \end{tabular}
 \end{table}
+
+Wist \xclubs, -1.
+
+[Ale czemu? To chodzi, nie
+pamiętam co tam się stało xd]
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -274,10 +321,23 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K) \\
+        -- & -- & 1\clubs & 1\diams \\
+        1\hearts & 2\diams & 2\hearts & 3\diams \\
+        3\hearts & all pass & & \\
     \end{tabular}
 \end{table}
+
+\xdiams A, \xdiams, \xspades A, dorzucone \xspades 5,
+i właściwie widać, że jest duże, chyba że Bartek miałby
+\xspades Q5, a rozgrywająca dołożyła \xspades 7
+zamiast \xspades 2 lub 3, żeby mnie zmylić.
+Uznałam odruchowo, że \xspades 5 jest mała, ściągnęłam króla,
+i rozgrywająca oddała jeszcze tylko \xclubs K, -1
+zamiast -2. A 4\diams było swoje (na trafieniu trefla), 
+może mogłam wrzucać...?
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 15}
@@ -290,10 +350,17 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} & \vul{N} (B) & \nvul{E} & \vul{S} (K) \\
+        -- & -- & -- & 1\nt \\
+        \pass & 3\nt \\ all pass & & \\
     \end{tabular}
 \end{table}
+
+Zdecydowałam się na wist kierowy, a nie karowy.
+Wzięliśmy 4 kiery i \xclubs K. Po karowym 
+wzięlibyśmy 3 kara, 2 kiery i (prawie na pewno) \xclubs K.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -306,10 +373,20 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (K) & \nvul{N} & \vul{E} (B) & \nvul{S}\\
+        \pass & \pass & \pass & 1\spades \\
+        \pass & 2\spades & \pass & 4\spades \\
+        all pass & & & \\
     \end{tabular}
 \end{table}
+
+Jeśli przeciwnicy mają w systemie drury, to wrzucenie
+końcówki lekko świrowe. Tym razem udało mi się nie 
+wypuścić wistem, chociaż pewnie logiczniej byłoby
+wyciągnąć pika (ale niewiele tu brakuje żeby pik wypuszczał).
+-1.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -322,10 +399,20 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (K) & \nvul{N} & \nvul{E} (B) & \nvul{S}\\
+        -- & 1\clubs & \pass & 1\hearts \\
+        \pass & 4\hearts & all pass & \\
     \end{tabular}
 \end{table}
+
+[sprawdź licytację bo nie pamiętam]\\
+Wist \xdiams A, dorzucone 7? Uznałam to za Lavinthala na pika
+i bojąc się, że Rozgrywający łatwo wyimpasuje moją damę kier
+i zbierze dzielące się trefle, wyszłam \xspades A 
+(do którego dostałam 2?) oszczędzając rozgrywającemu
+konieczności zgadywania pika, swoje.
+
+[co ty tam zrzucałeś...? xd]
 
 \pagebreak
 \section*{Rozdanie 18}
@@ -338,10 +425,19 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
+        -- & -- & 1\clubs & 1\hearts (??) \\
+        3\clubs & \pass & 3\diams & \pass \\
+        3\nt & \pass & 5\clubs & all pass \\
     \end{tabular}
 \end{table}
+
+Powinnam dać 4\clubs zamiast 3\nt, ale na szczęście
+partner uratował kontrakt bojąc się o piki. 5\clubs czapowe.
+A przeciwnik chyba nie zauważył piątego pika i to mogło się dla nas
+źle skończyć, bo po wejściu 1\spades nie wrzucalibyśmy 3\nt.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -354,10 +450,19 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (K) & \nvul{N} & \vul{E} (B) & \nvul{S}\\
+        \pass & \pass & 1\hearts & \pass \\
+        2\clubs & \pass & 4\clubs & \pass \\
+        4\hearts & all pass & \\
     \end{tabular}
 \end{table}
+
+No otworzyć to trzeba było. Na 4\clubs też mogłam 4\diams,
+niby last train ale jakoś głupio mi było bez cue \diams
+i z \xclubs AK do krótkości. Raczej i tak kończymy w 5\hearts.
+A szlemik bardzo mierny. Wist \xclubs 4, +2.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -367,13 +472,11 @@ mam wiedzieć o \xspades T...?
 {\vhand{AK52}{KT}{T92}{Q976}}
 {NSEW}
 
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+Rozdanie na Pluteckich, dociągnęli do 5\diams bez bilansu,
+idzie. Ale 3\nt lepsze, na podziale kar, a jeszcze wist 
+w pika wypuszcza nadróbkę.
 
-    \end{tabular}
-\end{table}
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 21}
@@ -386,10 +489,20 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
+        -- & \alrts{1\clubs} & 1\spades & \alrts{1\nt}\\
+        \pass & 2\diams & 2\hearts & 3\diams \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Myślałam nad pałą, mogło iść ale raczej widać, że ciężko.
+Pluteccy pokazali 10-14 po obu stronach.\\
+Wzięliśmy pika, przebitkę, dwa asy i kiera. Wist \xspades K.
+Na asa trefl dostałam wysoką zrzutkę, żeby nie wychodzić w kiera,
+wyszłam i tak, ale to chyba nic nie zmienia.\\
+
+[czemu tu idzie 7?]
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -402,10 +515,20 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (K) & \nvul{N} & \vul{E} (B) & \nvul{S}\\
+        -- & -- & 1\clubs & 1\diams \\
+        \pass & 1\hearts & 1\spades & 2\hearts \\
+        3\spades &  \dbl & all \pass & \\
     \end{tabular}
 \end{table}
+
+Z 1\spades się zgadzam, nie mam chyba alternatywy
+do tego 3\spades, na 2\spades od razu też nie mam.
+Miałam idealną rękę na jednostronne multi, ale 
+wejście popsuło plany. 3\spades jest -2,
+więc not worth it. Wist \xhearts K.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -418,10 +541,22 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (K) & \vul{N} & \vul{E} (B) & \vul{S}\\
+        -- & -- & -- & 3\clubs \\
+        4\spades & 5\clubs & 5\diams & \pass \\
+        5\spades & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Bartek zrespektował mój brak współpracy. Kara nie trafiłam,
+-2. Wist \xhearts K. Co ciekawe, prawie cała sala decydowała się na
+(co najmniej) 6\clubs, które nie idzie, ale było
+zdarzało się =. A jedna para nawet odważyła się skontrować 5\spades (XD).
+Na 6\spades z ręką \vul{S} powinno się dać pałę mając jedną lewę (czyli tak jak tu),
+a \vul{N} mając też jedną powinien spasować (\xhearts KQ chyba
+wystarczy).
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -434,10 +569,23 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (K) & \nvul{N} & \nvul{E} (B) & \nvul{S}\\
+        1\diams & \pass & 1\spades & \pass \\
+        2\diams & all \pass & & \\
     \end{tabular}
 \end{table}
+
+[S wchodził do licytacji 2\clubs? Tak mi się kojarzy]
+
+[TODO dla mnie, przypomnę sobie]
+Wist \xclubs A, \diams. Coś tu zrobiłam mocno nie tak,
+nie pamiętam. Po tym wiście idzie +3 (?), wzięłam +2.
+W ogóle tych kierów nie impasowałam...? A może on wyszedł w drugiej w kiera w ogóle,
+bo to faktycznie postawiłoby mnie w sytuacji, że jak
+przejdę karem 
+nie trafię kiera to będę tylko +1.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -450,10 +598,15 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} & \nvul{N} (B) & \vul{E} & \nvul{S} (K) \\
+        -- & 1\nt & \pass & 2\diams \\
+        \pass & 2\hearts & all \pass & \\
     \end{tabular}
 \end{table}
+
+Wist \xclubs K, +2.
+
+[Ty rozgrywałeś nwm co się działo]
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -466,10 +619,19 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} & \vul{N} (B) & \vul{E} & \vul{S} (K)\\
+        -- & -- & 1\clubs & \pass \\
+        1\nt & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Wist \xhearts J. O, burtówka. Jeszcze na naszą korzyść.\\
+Wzięliśmy 6 lew, tyle się należało.
+
+[Ale to chyba to co mogliśmy obłożyć bo nie wskoczyłam \xdiams A??
+Jak to się toczyło???]
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -482,10 +644,25 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (K) & \nvul{N} & \nvul{E} (B) & \nvul{S}\\
+        -- & -- & -- & \pass \\
+        \pass & 1\hearts & 1\nt & \pass \\
+        \alrts{2\clubs} & 2\hearts & 2\spades & all \pass \\
     \end{tabular}
 \end{table}
+
+Zapomniałam system :') 2\clubs powinno być \then\ \diams,
+albo inwitem z krótkością,
+na szczęście bez większych konsekwencji. Bartek dał 
+bardzo fajne 2\spades = góra z 4 pikami na wypadek inwitu 
+/ popraw na karo z karami. A ja się ucieszyłam i spasowałam,
+chociaż właściwie dokład 4\spades mógł wcale nie być świrem?
+
+\hfill -K
+
+Wist \xspades 2.
+
+[w rozgrywce nwm co się działo ale 10 idzie]
 
 \pagebreak
 \section*{Rozdanie 28}
@@ -498,10 +675,19 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (B) & \vul{S}\\
+        \pass & \pass & 1\nt & \pass \\
+        2\clubs & \pass & \pass$^{\text{XD}}$ & 2\diams \\
+        \pass & 3\diams & all \pass \\
     \end{tabular}
 \end{table}
+
+O dziwo mimo bilansu tylko 3 pary zagrały końcówkę,
+w tym jedna 5\diams. 3\nt z ręki \vul{N} idzie.\\
+Ania miała na 2\nt (na \vul{N}), Michał miał na
+dokład. Ale i tak zagrali 3\diams+1 za 64\%. Wist \xclubs 7.
+
+\hfill -K
 
 \pagebreak
 \section*{Rozdanie 29}
@@ -514,10 +700,26 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (K) & \vul{N} & \vul{E} (B) & \vul{S}\\
+        -- & \pass & 1\diams & \dbl \\
+        \pass & 1\hearts & 2\clubs & \dbl \\
+        2\diams & 2\hearts & 3\diams & 3\hearts \\
     \end{tabular}
 \end{table}
+
+Wydawało mi się, że zamiast 3\diams powinno się dać 3\clubs mimo wszystko.
+Mogę mieć 3-3 w młodych z figurami w treflach i 3\clubs będzie lespsze,
+(a na 2\diams musiałam poprawić). Natomiast z moją ręką
+2\diams nie muszę mówić, nie ma opcji, że na 2\clubs\dbl\ spasują.
+Więc ostatecznie po moim 2\diams na niewymuszonej zgadzam się z 3\diams.
+Ale jak nie dam 2\diams to pewnie zagrają 2\hearts, nie 3. Do wistu \xdiams A
+wyrzuciłam \xdiams T, wyrzucenie damy wypuszcza, bo nie ma komunikacji do przebitki.
+
+\hfill -K
+
+[teraz w kiera wyszedłeś?? czy pik]
+
+Wzięliśmy 2 kara, przebitkę i 2 kiery.
 
 \pagebreak
 \section*{Rozdanie 30}
@@ -530,9 +732,25 @@ mam wiedzieć o \xspades T...?
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (K) & \nvul{N} & \nvul{E} (B) & \nvul{S}\\
+        -- & -- &\pass & 1\spades \\
+        \pass & 2\clubs & \pass & 4\hearts \\
+        \pass & 4\spades & all \pass & \\
     \end{tabular}
 \end{table}
+
+[2\clubs jest poprawne?]
+
+Wist 5\clubs. gdzieś po drodze zrzuciłam 
+\xhearts 6 zamiast \xclubs T (na kiera).
+Jakoś nie chciałam tego trefla wyrzucić, kara spod wałka też nie,
+lekko podświadomie uznałam, że środkowy kier jest, z grubsza, na kiera.
+
+\hfill -K
+
+[Ej nie pamiętam co tam się stało, na co myśmy wzięli 2 lewy
+skoro nie wzięliśmy kierowej? Ty jeszcze miałeś pika po wzięciu na pika,
+że moja zrzutka i twoje niewyjście w kiera puściło?]
+
 
 \end{document}
