--- a/KrysiaBartek2024/old/resources/others/gazilli_09_2024.tex
+++ b/KrysiaBartek2024/old/resources/others/gazilli_09_2024.tex
@@ -20,7 +20,7 @@
 \urlstyle{same}
 
 
-\import{../../../lib/}{bridge.sty}
+\import{../../../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
 \title{\fontsize{30pt}{30pt}\selectfont Gazilli}
@@ -30,7 +30,7 @@
 \maketitle
 
 \begin{formal}
-\href{https://www.youtube.com/@multi2diamonds}{nagranie wykładu} 
+\href{https://www.youtube.com/watch?v=jFrwjz1Wa-8&list=PL0M097usj0YaTfcHFybtHepIQikiOLg9i&index=8}{nagranie wykładu} 
 \vspace{0.3cm}
 \end{formal}
 
